[package]
name = "vorpal-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vorpal"
path = "vorpal.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
vorpal-sdk = { git = "https://github.com/ALT-F4-LLC/vorpal-sdk.git", branch = "feature/sdk-rust" }
